# shop-agent

./: .gitignore  README.md  policies.json  pyproject.toml
shop_agent/: __init__.py  cli.py  db.py  gemini_client.py  models.py  orchestrator.py  policy.py  pricing.py  server.py  state.py
tests/: test_dialog.py  test_policy_engine.py  test_prompt_injection.py
